@@ -1293,8 +1293,47 @@ describe 'Asciidoctor::PDF::Converter - Section' do
     end
   end
 
-  it 'should keep section that advanced page with first block of unbreakable content if breakable option is set on section' do
+  it 'should keep section that advances page with first block of unbreakable content if breakable option is set on section' do
     with_content_spacer 200, 675 do |spacer_path|
+      pdf_theme = {
+        heading_min_height_after: nil,
+        toc_font_color: 'a0a0a0',
+      }
+      pdf = to_pdf <<~END, pdf_theme: pdf_theme, analyze: true
+      :toc:
+
+      <<<
+
+      == Section A
+
+      image::#{spacer_path}[pdfwidth=70mm]
+
+      [%breakable]
+      == Section B
+
+      [%unbreakable]
+      --
+      keep
+
+      this
+
+      together
+      --
+      END
+
+      toc_entries = (pdf.lines (pdf.find_text page_number: 1))[1..-1]
+      (expect toc_entries).to have_size 2
+      (expect toc_entries[0]).to end_with '2'
+      (expect toc_entries[1]).to end_with '3'
+      section_b_text = pdf.find_unique_text 'Section B', font_color: '333333'
+      (expect section_b_text[:page_number]).to be 3
+      content_text = pdf.find_unique_text 'keep', font_color: '333333'
+      (expect content_text[:page_number]).to be 3
+    end
+  end
+
+  it 'should keep section that self-advances with first block of unbreakable content if breakable option is set on section' do
+    with_content_spacer 200, 685 do |spacer_path|
       pdf_theme = {
         heading_min_height_after: nil,
         toc_font_color: 'a0a0a0',
